[package]
name = "kernel"
version = "0.1.0"
authors = ["akst <contact@akst.io>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = { version = "0.1.5", optional = true }
js-sys = "0.3.35"
mythos_core = { path = "../deps/mythos-rs/mythos-core" }
mythos_web = { path = "../deps/mythos-rs/mythos-web" }
wasm-bindgen = "0.2.58"
wasm-bindgen-futures = "0.4.8"

# Unfortunately requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }

[features]
default = ["console_error_panic_hook"]

[dependencies.web-sys]
version = "0.3.35"
features = [
  "AddEventListenerOptions",
  "CanvasRenderingContext2d",
  "CharacterData",
  "console",
  "CssStyleDeclaration",
  "Document",
  "DomException",
  "Element",
  "Event",
  "EventTarget",
  "HtmlBodyElement",
  "HtmlCanvasElement",
  "HtmlElement",
  "HtmlImageElement",
  "HtmlMetaElement",
  "HtmlPreElement",
  "Location",
  "MouseEvent",
  "Node",
  "Performance",
  "PointerEvent",
  "Request",
  "RequestInit",
  "Response",
  "Text",
  "WheelEvent",
  "Window",
]
